[package]
name = "oprf-world-types"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
alloy = { workspace = true }
ark-babyjubjub = { workspace = true }
ark-ff.workspace = true
circom-types = { workspace = true, features = ["bn254", "groth16", "proof"] }
eddsa-babyjubjub = { workspace = true }
groth16-material = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "serde"] }
oprf-core = { workspace = true }
ruint = { workspace = true }
serde = { workspace = true, features = ["derive"] }
ark-serde-compat = { workspace = true, features = ["babyjubjub"] }
