[package]
name = "world-id-oprf-zk"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ark-babyjubjub = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-groth16.workspace = true
ark-serde-compat = { workspace = true }
circom-types.workspace = true
eyre.workspace = true
groth16 = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "serde"] }
world-id-oprf-core = { path = "../oprf-core" }
rand.workspace = true
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
witness = { workspace = true }

[features]
default = ["embed-zkeys"]
embed-zkeys = []
