[package]
name = "oprf-zk"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ark-babyjubjub = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16.workspace = true
ark-serde-compat = { workspace = true }
circom-types = { workspace = true }
circom-witness-rs = { workspace = true }
eyre.workspace = true
groth16 = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "serde"] }
rand.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json"] }
ruint = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
default = ["embed-zkeys"]
embed-zkeys = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
