[package]
name = "oprf-zk"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ark-babyjubjub = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16.workspace = true
ark-serde-compat = { workspace = true }
circom-types = { workspace = true }
eyre.workspace = true
groth16 = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "serde"] }
rand.workspace = true
reqwest = { workspace = true }
ruint = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
circom-witness-rs = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ark-circom = { git = "https://github.com/arkworks-rs/circom-compat" }
wasmer = { version = "=6.1.0-rc.3", default-features = false, features = ["js-default"] }
num-bigint = { version = "0.4" }

[features]
default = ["embed-zkeys"]
embed-zkeys = []
