[package]
name = "world-id-primitives-types"
description = "Lightweight serde-compatible types for the World ID Protocol, without crypto dependencies."
publish = true
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
hex = { workspace = true }
ruint = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ciborium = { workspace = true }
serde_json = { workspace = true }
