[package]
name = "world-id-primitives"
description = "Contains the raw base primitives (without implementations) for the World ID Protocol."
publish = true
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = ["circuits"]
# Enable circuit-related types (requires C++ toolchain, not WASM compatible)
circuits = ["dep:circom-types", "dep:groth16-material", "dep:ark-serde-compat"]

[dependencies]
alloy-primitives = { workspace = true, default-features = false, features = [
    "serde",
    "std",
] }
ark-babyjubjub = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-serde-compat = { workspace = true, optional = true }
ark-serialize = { workspace = true }
arrayvec = { workspace = true, features = ["serde"] }
circom-types = { workspace = true, features = ["groth16"], optional = true }
groth16-material = { workspace = true, features = ["circom"], optional = true }
eddsa-babyjubjub = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
taceo-groth16-sol = { workspace = true }
ruint = { workspace = true, features = ["ark-ff-05"] }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }
poseidon2 = { workspace = true }
sha3 = { workspace = true, default-features = false }
rand = { workspace = true }

# WASM support: getrandom needs 'js' feature to work in browsers
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
ciborium = { workspace = true }
