[package]
name = "world-id-proof"
description = "World ID Proof crate"
publish = true
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
repository.workspace = true
include = [
    "src/**/*",
    "tests/**/*",
    "noir/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
]

[features]
default = []

# Embed Circom zkeys (query + nullifier proof material) into the binary
embed-zkeys = ["dep:tar"]
# Compress the embedded zkeys to reduce binary size (ARK point compression)
compress-zkeys = ["embed-zkeys", "dep:ark-serialize", "dep:circom-types"]
# Compress the tar archive with zstd
zstd-compress-zkeys = ["embed-zkeys", "dep:zstd"]

embed-ownership-prover = ["dep:provekit-r1cs-compiler"]
embed-ownership-verifier = ["dep:provekit-r1cs-compiler"]
embed-noir-artifacts = ["embed-ownership-prover", "embed-ownership-verifier"]

# Experimental passkey ownership demo artifacts.
embed-passkey-ownership-prover = []
embed-passkey-ownership-verifier = []
embed-passkey-noir-artifacts = [
    "embed-passkey-ownership-prover",
    "embed-passkey-ownership-verifier",
]

# Embed everything
embed-zk-artifacts = ["embed-zkeys", "embed-noir-artifacts"]

[dependencies]
ark-babyjubjub = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true, optional = true }
circom-types = { workspace = true, features = ["bn254", "groth16", "zkey"], optional = true }
tar = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zstd = { workspace = true, optional = true }
eddsa-babyjubjub = { workspace = true }
provekit-common = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
groth16-material = { workspace = true, features = ["circom"] }
ruint = { workspace = true, features = ["ark-ff-05"] }
poseidon2 = { workspace = true }
taceo-groth16-sol = { workspace = true }
taceo-oprf = { workspace = true, features = ["client", "core"] }
eyre = { workspace = true }
once_cell = { workspace = true }
zeroize = { workspace = true }

# Internal
world-id-primitives = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
provekit-prover = { workspace = true }
provekit-verifier = { workspace = true }

[build-dependencies]
eyre = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
ark-serialize = { workspace = true }
circom-types = { workspace = true, features = ["bn254", "groth16", "zkey"] }
rayon = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }
provekit-common = { workspace = true }
provekit-r1cs-compiler = { workspace = true, optional = true }

[dev-dependencies]
world-id-test-utils = { workspace = true }
