[package]
name = "world-id-registry"
description = "World ID Registry crate"
publish = true
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
repository.workspace = true
include = ["src/**/*", "tests/**/*", "Cargo.toml", "README.md"]

[dependencies]
anyhow = { workspace = true }
alloy = { workspace = true, features = ["sol-types", "signer-local"] }
poseidon2 = { workspace = true }
eddsa-babyjubjub = { workspace = true }
eyre = { workspace = true }
world-id-primitives = { workspace = true }

[dev-dependencies]
ruint = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
