[package]
name = "world-id-registry"
description = "Minimal World ID Registry contract bindings"
publish = true
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
repository.workspace = true
include = ["src/**/*", "Cargo.toml"]

[dependencies]
alloy = { workspace = true, features = ["sol-types", "signer-local", "json", "contract"] }
anyhow = { workspace = true }
