[package]
name = "world-id-request"
description = "World ID Request crate"
publish = true
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
repository.workspace = true
include = ["src/**/*", "tests/**/*", "build.rs", "Cargo.toml", "README.md"]

[dependencies]
alloy = { workspace = true, features = ["sol-types", "signer-local"] }
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
world-id-primitives = { workspace = true }
taceo-oprf-types = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "serde"] }
rand = { workspace = true }
uuid = { workspace = true, features = ["js"] }
