[package]
name = "world-id-signer"
description = "World ID Signer crate"
publish = true
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
repository.workspace = true
include = ["src/**/*", "tests/**/*", "Cargo.toml", "README.md"]

[dependencies]
alloy = { workspace = true, features = [
    "signer-local",
] }
eddsa-babyjubjub = { workspace = true }
secrecy = { workspace = true }
world-id-primitives = { workspace = true }
