[package]
name = "world-id-solana-satellite"
description = "Minimal Solana World ID satellite program with permissioned gateway state updates."
publish = false
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
world-id-solana-verifier = { path = "../solana-verifier" }
