[package]
name = "world-id-solana-verifier"
description = "Solana-oriented Groth16 verifier adapter for World ID."
publish = false
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
groth16-solana = "0.2.0"
hex = { workspace = true }
num-bigint = "0.4.6"
solana-bn254 = "2.2.2"
thiserror = { workspace = true }
world-id-primitives = { workspace = true }
