[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
alloy = { workspace = true, default-features = false, features = [
    "contract",
    "reqwest",
    "rpc",
    "rpc-types",
    "signer-local",
    "sol-types",
    "json",
] }
alloy-node-bindings = "1.0.38"
eyre = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
poseidon2 = { workspace = true }
ark-babyjubjub = { workspace = true }
ark-ff = { workspace = true }
oprf-world-types = { workspace = true }
world-id-primitives = { workspace = true }