[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
alloy = { workspace = true, default-features = false, features = [
    "contract",
    "reqwest",
    "rpc",
    "rpc-types",
    "signer-local",
    "sol-types",
    "json",
] }
alloy-node-bindings = "1.0.38"
eyre = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
poseidon2 = { workspace = true }
ark-babyjubjub = { workspace = true }
ark-ff = { workspace = true }
eddsa-babyjubjub = { workspace = true }
k256 = { workspace = true, features = ["ecdsa"] }
rand = { workspace = true }
ark-ec = { workspace = true }
taceo-oprf = { workspace = true, features = ["full"] }
taceo-oprf-test-utils = { workspace = true }
taceo-oprf-key-gen = { workspace = true }
axum = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "sync"] }
world-id-oprf-node = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
world-id-primitives = { workspace = true }
