[package]
name = "world-id-types"
description = "World ID Credential crate"
publish = true
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
repository.workspace = true
include = ["src/**/*", "tests/**/*", "Cargo.toml", "README.md"]

[features]
# Default feature includes http-minimal to provide StatusCode for error response types
# This is required for backward compatibility as StatusCode is used in public API
default = ["http-minimal"]
openapi = ["dep:utoipa"]
# Axum support (for web services) - when enabled, provides IntoResponse implementations
# Note: When both axum and http-minimal are enabled, axum's StatusCode is preferred
axum = ["dep:axum"]
# Provides StatusCode type via the http crate when axum is not enabled
# This is needed for GatewayErrorResponse and IndexerErrorResponse types
http-minimal = ["dep:http"]

[dependencies]
alloy = { workspace = true }
utoipa = { workspace = true, optional = true }
world-id-primitives = { workspace = true }
ruint = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
axum = { workspace = true, optional = true }
hex = { workspace = true }

# Only needed when axum feature is not enabled
http = { workspace = true, optional = true }

# Internal
world-id-registry = { workspace = true }

[dev-dependencies]
ruint = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
