[package]
name = "world-id-core"
version = "0.1.0"
build = "build.rs"
license.workspace = true
edition.workspace = true

[[bin]]
name = "authenticator"
path = "bin/authenticator.rs"
required-features = ["authenticator", "cli"]

[[bin]]
name = "rp"
path = "bin/rp.rs"
required-features = ["cli"]

[dependencies]
alloy = { version = "1.0.36", features = ["sol-types"], default-features = false }
ark-bn254 = { workspace = true }
ark-babyjubjub = { workspace = true }
ark-ff = { workspace = true }
anyhow = { workspace = true }
ciborium = "0.2.2"
hex = { workspace = true }
ruint = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eddsa-babyjubjub = { git = "https://github.com/TaceoLabs/nullifier-oracle-service.git" }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
oprf-client = { git = "https://github.com/TaceoLabs/nullifier-oracle-service.git", optional = true }
oprf-types = { git = "https://github.com/TaceoLabs/nullifier-oracle-service.git", optional = true }
oprf-test = { git = "https://github.com/TaceoLabs/nullifier-oracle-service.git", optional = true }
circom-types = { git = "https://github.com/TaceoLabs/co-snarks.git", default-features = false, optional = true }
ark-serde-compat = { git = "https://github.com/TaceoLabs/nullifier-oracle-service.git" }
poseidon2 = { git = "https://github.com/TaceoLabs/nullifier-oracle-service.git" }
rand = "0.8.5"
ark-ec = "0.5.0"
uuid = "1.14.0"
witness = { git = "https://github.com/TaceoLabs/circom-witness-rs.git"}
eyre = "0.6.12"
groth16 = { git = "https://github.com/TaceoLabs/groth16.git", optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }

[features]
default = ["authenticator"]

authenticator = [
    "alloy/contract", 
    "alloy/signer-local",
    "alloy/reqwest-rustls-tls",
    "dep:circom-types",
    "dep:groth16",
    "dep:oprf-client",
    "dep:oprf-types",
    "dep:reqwest"
]

cli = ["dep:oprf-test"]