[package]
name = "world-id-core"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[[bin]]
name = "authenticator"
path = "bin/authenticator.rs"
required-features = ["authenticator", "cli"]

[[bin]]
name = "rp"
path = "bin/rp.rs"
required-features = ["cli"]

[[bin]]
name = "issuer"
path = "bin/issuer.rs"

[dependencies]
alloy = { version = "1", features = ["sol-types", "rpc"], default-features = false }
ark-babyjubjub = { workspace = true }
ark-bn254 = { workspace = true }
poseidon2 = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
anyhow = { workspace = true }
chrono = "0.4"
ciborium = "0.2"
hex = { workspace = true }
ruint = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ark-serde-compat = { git = "https://github.com/TaceoLabs/nullifier-oracle-service", rev = "698f03f" }
eddsa-babyjubjub = { git = "https://github.com/TaceoLabs/nullifier-oracle-service", rev = "698f03f" }
oprf-client = { git = "https://github.com/TaceoLabs/nullifier-oracle-service", optional = true, rev = "698f03f" }
oprf-types = { git = "https://github.com/TaceoLabs/nullifier-oracle-service", optional = true, rev = "698f03f" }
oprf-test = { git = "https://github.com/TaceoLabs/nullifier-oracle-service", optional = true, rev = "698f03f" }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
circom-types = { git = "https://github.com/TaceoLabs/co-snarks.git", default-features = false, optional = true }
rand = "0.8"
ark-ec = "0.5.0"
uuid = "1"
witness = { git = "https://github.com/TaceoLabs/circom-witness-rs.git"}
eyre = "0.6"
groth16 = { git = "https://github.com/TaceoLabs/groth16.git", optional = true }
reqwest = { workspace = true, optional = true }
secrecy = { version = "0.10.3", optional = true }

[features]
default = ["authenticator"]

authenticator = [
    "alloy/contract",
    "alloy/signer-local",
    "alloy/reqwest-rustls-tls",
    "dep:circom-types",
    "dep:groth16",
    "dep:oprf-client",
    "dep:oprf-types",
    "dep:reqwest",
    "dep:secrecy"
]

issuer = ["alloy/signer-local", "dep:secrecy"]

rp = ["dep:oprf-types"]

cli = ["dep:oprf-test"]

[dev-dependencies]
alloy-node-bindings = "1.0.38"
