[package]
name = "zk-mobile-bench"
version = "0.1.0"
edition = "2021"
publish = false
description = "Mobile benchmarks for World ID ZK proof generation"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
# Benchmarking
mobench-sdk = { git = "https://github.com/worldcoin/mobile-bench-rs", branch = "codex/ci-devex" }
inventory = "0.3"

# World ID
world-id-core = { workspace = true, default-features = false, features = ["authenticator", "embed-zkeys", "issuer"] }
world-id-primitives = { workspace = true }
world-id-proof = { workspace = true }

# ZK dependencies
ark-babyjubjub = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
eddsa-babyjubjub = { workspace = true }
groth16-material = { workspace = true, features = ["circom"] }
poseidon2 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# OPRF dependencies
taceo-oprf = { workspace = true }

# Utilities
rand = { workspace = true }
rand_chacha = { workspace = true }
thiserror = { workspace = true }

# UniFFI for mobile bindings
uniffi = { workspace = true, features = ["cli"] }

[dev-dependencies]
