[package]
name = "world-id-billing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
alloy = { workspace = true, features = [
    "contract",
    "providers",
    "provider-http",
    "reqwest-rustls-tls",
    "sol-types",
] }
alloy-primitives = { workspace = true }
backon = { workspace = true, features = ["std", "tokio-sleep"] }
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
eyre = { workspace = true }
metrics = { workspace = true }
telemetry-batteries = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = { workspace = true }
world-id-services-common = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, features = ["full", "node-bindings"] }
serde_json = { workspace = true }
world-id-test-utils = { workspace = true }
